--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,19 @@
 greeting:
   message: "hello"
+
+server:
+  port: 8080
+
+quarkus:
+  application:
+    name: usermanagement
+  datasource:
+    db-kind: postgresql
+    username: portal
+    password: portal
+    jdbc:
+      url: jdbc:postgresql://localhost:30002/books
+#    ddl:
+  hibernate-orm:
+    database:
+      generation: create-drop
