--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'io.quarkus'
+    id 'io.ebean' version '14.1.0'
 }
 
 repositories {
@@ -15,9 +16,10 @@ dependencies {
     implementation 'io.quarkus:quarkus-config-yaml'
     implementation 'io.quarkus:quarkus-smallrye-graphql-client'
     implementation 'io.quarkus:quarkus-smallrye-graphql'
-    implementation 'io.quarkus:quarkus-jdbc-postgresql'
+//    implementation 'io.quarkus:quarkus-jdbc-postgresql'
     implementation 'io.quarkus:quarkus-arc'
-    implementation 'io.quarkus:quarkus-hibernate-orm'
+    implementation 'io.quarkus:quarkus-jdbc-postgresql'
+//    implementation 'io.quarkus:quarkus-hibernate-orm'
     testImplementation 'io.quarkus:quarkus-junit5'
     testImplementation 'io.rest-assured:rest-assured'
 
@@ -26,19 +28,35 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.32'
     testCompileOnly 'org.projectlombok:lombok:1.18.32'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'
+
+    // PostgreSQL driver
+
+    //Ebean
+    annotationProcessor("io.ebean:querybean-generator:14.1.0")
+//    implementation 'org.avaje.composite:logback:1.1'
+    implementation 'io.ebean:ebean-postgres:14.1.0'
+    implementation 'io.ebean:ebean-querybean:14.1.0'
+    testImplementation 'io.ebean:ebean-test:14.1.0'
+//    testImplementation 'org.avaje.composite:junit:1.1'
+}
+
+ebean {
+    debugLevel = 0 //0 - 9
 }
 
 group 'org.acme'
 version '1.0.0-SNAPSHOT'
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_21
-    targetCompatibility = JavaVersion.VERSION_21
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 }
 
 test {
     systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
+    testLogging.showStandardStreams = true
 }
+
 compileJava {
     options.encoding = 'UTF-8'
     options.compilerArgs << '-parameters'
